[gd_scene load_steps=10 format=3 uid="uid://b4nfsi88uoetg"]

[ext_resource type="Script" uid="uid://g5avuown6o4i" path="res://Scripts/shift.gd" id="1_8g6xr"]
[ext_resource type="AudioStream" uid="uid://cosc81evi4ud" path="res://SFX/spacebar-click-keyboard-199448_iju6vpxH.mp3" id="2_nm4ty"]
[ext_resource type="Texture2D" uid="uid://bjpjxy1rrr25i" path="res://Art/Buttons/tab keycap button-Sheet.png" id="3_3122p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl1ca"]
size = Vector2(16, 6.92971)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic0nm"]
size = Vector2(16, 9.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x570"]
size = Vector2(16, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_v80lh"]
atlas = ExtResource("3_3122p")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s2w1"]
atlas = ExtResource("3_3122p")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_ppecm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v80lh")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s2w1")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[node name="Shift" type="StaticBody2D"]
script = ExtResource("1_8g6xr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.464856)
shape = SubResource("RectangleShape2D_pl1ca")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1.0625)
shape = SubResource("RectangleShape2D_ic0nm")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_7x570")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_nm4ty")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.25, -3.875)
scale = Vector2(0.0917969, 0.124023)
sprite_frames = SubResource("SpriteFrames_ppecm")
animation = &"Up"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
